--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ get-version:
   stage: init
   image: alpine:latest
   tags:
-    - kube
+    - on-prem
   script:
     - ADDON_NAME=$(sed -n 's/name = \"\(.*\)\"/\1/p' package.py)
     - VERSION=$(sed -n 's/version = \"\(.*\)\"/\1/p' package.py)
@@ -26,7 +26,7 @@ get-version:
 create-package:
   stage: create
   tags:
-    - kube
+    - on-prem
   image: python:3.9-bookworm
   script:
     - python create_package.py
@@ -51,7 +51,7 @@ upload-addon:
 tag-version:
   stage: release
   tags:
-    - kube
+    - on-prem
   dependencies:
     - get-version
   image: registry.gitlab.com/gitlab-org/release-cli:latest
