Remove escaped strings

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,10 @@ get-version:
   script:
     - ADDON_NAME=$(sed -n 's/^name = "\([^"]*\)".*/\1/p' package.py)
     - VERSION=$(sed -n 's/^version = "\([^"]*\)".*/\1/p' package.py)
-    - echo "ADDON_NAME=\"${ADDON_NAME}\""
-    - echo "ADDON_NAME=\"${ADDON_NAME}\"" > version_info.txt
-    - echo "VERSION=\"${VERSION}\""
-    - echo "VERSION=\"${VERSION}\"" >> version_info.txt
+    - echo "ADDON_NAME=${ADDON_NAME}"
+    - echo "ADDON_NAME=${ADDON_NAME}" > version_info.txt
+    - echo "VERSION=${VERSION}"
+    - echo "VERSION=${VERSION}" >> version_info.txt
   artifacts:
     reports:
       dotenv: version_info.txt
