--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ get-version:
     reports:
       dotenv: version_info.txt
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+    - if: '$CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && !$CI_COMMIT_TAG'
     - if: $CI_COMMIT_TAG
       when: never
     - when: manual
