--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ get-version:
     reports:
       dotenv: version_info.txt
   rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH && $CI_COMMIT_BRANCH != $CI_COMMIT_TAG
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
     - if: $CI_COMMIT_TAG
       when: never
     - when: manual
@@ -35,6 +35,9 @@ create-package:
   artifacts:
     paths:
       - package
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
 
 upload-addon:
   stage: upload
@@ -47,6 +50,9 @@ upload-addon:
   script:
     - python -m pip install ayon-python-api
     - python deploy_addon.py
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
 
 tag-version:
   stage: release
@@ -60,3 +66,6 @@ tag-version:
   release:
     tag_name: '$VERSION'
     description: 'Release $VERSION using CI pipeline $CI_PIPELINE_ID'
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
